--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/dashboard.css">
 
   <script src="/socket.io/socket.io.js"></script>
-
+  
   <script src="lib/CodeMirror/lib/codemirror.js"></script>
   <script src="lib/CodeMirror/mode/javascript/javascript.js"></script>
   <script src="lib/marked/marked.min.js"></script>
@@ -19,7 +19,9 @@
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="lib/jquery/dist/jquery.min.js"></script> 
 </head>
+
 <body>
 <div ui-view></div>
 
