--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -57,7 +57,7 @@
             <div class="dashboard-stats-entry">
               <h3 class="dashboard-stats-entry__title">All Time</h3>
               <div class="dashboard-stats-entry__body">
-                <p class="dashboard-stats-entry__stat"><span>{{ totalWins }}</span> wins, <span>{{ points }}</span> points</p>
+                <p class="dashboard-stats-entry__stat"><span>{{ totalWins }}</span> wins, <span>{{ totalPoints }}</span> points</p>
               </div>
             </div>
           </div>
