--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="lib/CodeMirror/theme/material.css">
   <link rel="stylesheet" href="assets/css/animate.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/difficulty.css">
 
   <script src="/socket.io/socket.io.js"></script>
 
