--- a/client/app/directives/header-main.html
+++ b/client/app/directives/header-main.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-main__inner">
       <div class="header-main__logo">
-        <a href="#/dashboard"><img src="assets/img/logo.svg" alt=""></a>
+        <a href="#/dashboard"><img src="assets/img/battleicon_red.png" alt=""></a>
       </div>
       <div class="header-main__user">
         <a href="#" class="header-main__user-details">
@@ -16,7 +16,7 @@
             <a href="#/dashboard">Dashboard</a>
           </li>
           <li class="header-main__user-dropdown-item">
-            <a href="#/">Profile</a>
+            <a href="#/profile">Profile</a>
           </li>
           <li class="header-main__user-dropdown-item header-main__user-dropdown-sep">
             <a href="#/">Preferences</a>
