--- a/client/app/directives/header-nonauth.html
+++ b/client/app/directives/header-nonauth.html
@@ -1,5 +1,5 @@
 <div class="auth__header">
   <a href="#/">
-    <img src="assets/img/logo.svg" alt="" class="auth__logo">
+    <img src="assets/img/battleicon_red.png" alt="" class="auth__logo">
   </a>
 </div>
