--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/css/animate.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/difficulty.css">
+  <link rel="stylesheet" href="assets/css/dashboard.css">
 
   <script src="/socket.io/socket.io.js"></script>
 
@@ -25,6 +26,7 @@
 <script src="app/services/services.js"></script>
 <script src="app/auth/auth.js"></script>
 <script src="app/home/home.js"></script>
+<script src="app/profile/profile.js"></script>
 <script src="app/dashboard/dashboard.js"></script>
 <script src="app/battle/battle.js"></script>
 <script src="app/app.js"></script>
