Setting page created with a couple options / Set up facebook a little

--- a/client/app/directives/header-main.html
+++ b/client/app/directives/header-main.html
@@ -19,7 +19,7 @@
             <a href="#/profile">Profile</a>
           </li>
           <li class="header-main__user-dropdown-item header-main__user-dropdown-sep">
-            <a href="#/">Preferences</a>
+            <a href="#/settings">Settings</a>
           </li>
           <li class="header-main__user-dropdown-item">
             <a href="#/logout">Log out</a>
