--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/difficulty.css">
   <link rel="stylesheet" href="assets/css/dashboard.css">
+  <link rel="stylesheet" href="assets/css/settings.css">
 
   <script src="/socket.io/socket.io.js"></script>
 
@@ -21,6 +22,7 @@
   <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
 </head>
 <body>
+<div id="fb-root"></div>
 <div ui-view></div>
 
 <script src="app/services/services.js"></script>
@@ -28,6 +30,7 @@
 <script src="app/home/home.js"></script>
 <script src="app/profile/profile.js"></script>
 <script src="app/dashboard/dashboard.js"></script>
+<script src="app/settings/settings.js"></script>
 <script src="app/battle/battle.js"></script>
 <script src="app/app.js"></script>
 </body>
