--- a/client/index.html
+++ b/client/index.html
@@ -30,10 +30,11 @@
 <script src="app/services/services.js"></script>
 <script src="app/auth/auth.js"></script>
 <script src="app/home/home.js"></script>
-<script src="app/profile/profile.js"></script>
+<!-- <script src="app/profile/profile.js"></script> -->
 <script src="app/dashboard/dashboard.js"></script>
 <script src="app/settings/settings.js"></script>
 <script src="app/battle/battle.js"></script>
+<script src="app/collab/collab.js"></script>
 <script src="app/app.js"></script>
 </body>
 </html>
