--- a/client/app/settings/settings.html
+++ b/client/app/settings/settings.html
@@ -57,10 +57,8 @@
 
       </div>
       </br>
-      <fb:login-button size="large" scope="public_profile, user_friends, email">Find Friends with Facebook</fb:login-button>
-      <button ng-click="getFriends()">FIND FRIENDS</button>
-
-      <div>{{fbFriends}}</div>
+      <fb:login-button size="large" scope="public_profile, user_friends, email">Link Facebook</fb:login-button>
+      <button ng-click="doAllTheThings()">FIND FRIENDS</button>
 
     </div><!-- dashboard -->
   </div><!-- /container -->
