added friends list and friend avatars

--- a/client/app/battle/battle.html
+++ b/client/app/battle/battle.html
@@ -18,7 +18,7 @@
 
       <div class="battle-field" ng-class="battleFieldClass">
         <div class="battle-field__header">
-          <p>{{ user }} <span>-vs-</span> {{ opponent }}</p>
+          <p> <img class="battleavatar" src="{{avatar}}"/> {{ user }} <span>-vs-</span> {{ opponent }}</p>
 
         </div><!-- /battlefield header -->
 
