--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="lib/CodeMirror/lib/codemirror.css">
   <link rel="stylesheet" href="lib/CodeMirror/theme/material.css">
   <link rel="stylesheet" href="assets/css/animate.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/newstyle.css">
   <link rel="stylesheet" href="assets/css/difficulty.css">
   <link rel="stylesheet" href="assets/css/dashboard.css">
   <link rel="stylesheet" href="assets/css/settings.css">
