--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header__inner">
       <div class="header__logo">
-        <a href="/#/"><img src="assets/img/logo.svg" alt=""></a>
+        <a href="/#/"><img src="assets/img/battleicon_red.png" alt=""></a>
       </div>
       <nav class="nav">
         <ul class="nav__items">
@@ -16,6 +16,6 @@
 
 <main class="main">
   <div class="container">
-    <p class="lead">Welcome to <a href="/#/">battlescript</a>, a friendly and comptetitive online JavaScript coding battle field.</p>
+    <p class="lead">Welcome to <a href="/#/">battlescript</a>, a friendly and competitive online JavaScript coding battle field.</p>
   </div>
 </main>
