reverted back to localhost

--- a/client/app/battle/battle.html
+++ b/client/app/battle/battle.html
@@ -1,4 +1,4 @@
-<header-main user-info="userInfo"></header-main>
+margin-bottom: -15px<header-main user-info="userInfo"></header-main>
 <main class="main">
   <div class="container">
     <div class="battle">
@@ -18,7 +18,7 @@
 
       <div class="battle-field" ng-class="battleFieldClass">
         <div class="battle-field__header">
-          <p> <img class="battleavatar" src="{{avatar}}"/> {{ user }} <span>-vs-</span> {{ opponent }}</p>
+          <p> <img class="battleavatar" src="{{avatar}}"/> {{ user }} <span>-vs-</span> {{ opponent }} <img class="battleavatar" src="{{opponentAvatar}}"/></p>
 
         </div><!-- /battlefield header -->
 
