even more last minute changes

--- a/client/app/collab/collab.html
+++ b/client/app/collab/collab.html
@@ -28,7 +28,7 @@
 
       <div class="battle-field" ng-class="collabFieldClass">
         <div class="battle-field__header">
-          <p>{{ user }} <span>&</span> {{ opponent }}</p>
+          <p> <img class="battleavatar" src="{{avatar}}"/> {{ user }} <span>-vs-</span> {{ opponent }} <img class="battleavatar" src="{{opponentAvatar}}"/></p>
 
         </div><!-- /battlefield header -->
 
