deleted typo in html

--- a/client/app/battle/battle.html
+++ b/client/app/battle/battle.html
@@ -1,4 +1,4 @@
-<margin-bottom: -15px<header-main user-info="userInfo"></header-main>
+<header-main user-info="userInfo"></header-main>
 <main class="main">
   <div class="container">
     <div class="battle">
